hoan thanh lay danh sach diem vao frontend